# wasm-tetris

./: Cargo.toml  README.md
src/: lib.rs
static/: index.html  index.js
