[package]
name = "wasm-tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer"
] }

[lib]
crate-type = ["cdylib", "rlib"]
