[package]
name = "wasm-tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation"
] }

[lib]
crate-type = ["cdylib", "rlib"]
